[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
flux-rs = { git = "https://github.com/vrindisbacher/flux-inferx" }
flux-alloc = { git = "https://github.com/vrindisbacher/flux-inferx" }
terrapin-dynamo-sdk = { path = "../membership-app/terrapin-dynamo-sdk/" }
axum = "0.8.9"
uuid = { version = "1.23.1", features = ["v4"] }
aws-config = "1.8.16"
aws-sdk-dynamodb = "1.111.0"

[package.metadata.flux]
enabled = true
# include = [
#     "./dynamo/src/lib.rs"
# ]
